--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.example</groupId>
+    <groupId>ru.itmo</groupId>
     <artifactId>organization-management</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
