--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,10 @@ jobs:
         run: |
             ssh -n -p "${{ secrets.SSH_PORT }}" -i ~/.ssh/id_key \
             "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" \
-            "set -euo pipefail; cd ~/apps/organization-management && env SERVER_PORT=${{ secrets.SERVER_PORT }} ./appctl.sh restart"
+            "set -euo pipefail; cd ~/apps/organization-management && env SERVER_PORT=${{ vars.SERVER_PORT }} ./appctl.sh restart"
 
       - name: Healthcheck
         run: |
             ssh -n -p "${{ secrets.SSH_PORT }}" -i ~/.ssh/id_key \
             "${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}" \
-            'for i in $(jot 60); do nc -z 127.0.0.1 ${{ secrets.SERVER_PORT }} && exit 0; sleep 1; done; echo "Port ${{ secrets.SERVER_PORT }} not open"; exit 1'
+            'for i in $(jot 300); do nc -z 127.0.0.1 ${{ vars.SERVER_PORT }} && exit 0; sleep 1; done; echo "Port ${{ vars.SERVER_PORT }} not open"; exit 1'
