--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DBNAME=
-POSTGRES_USERNAME=
-POSTGRES_PASSWORD=
-POSTGRES_SCHEMA=
+POSTGRES_HOST=localhost:5432
+POSTGRES_DBNAME=organizations
+POSTGRES_SCHEMA=public
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
 
-JAVA_TOOL_OPTIONS=-XX:MaxRAMPercentage=75.0 -XX:+UseG1GC
+SERVER_PORT=8080
+
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,https://helios.cs.ifmo.ru
+
+LOG_LEVEL=INFO
