--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,23 +21,17 @@ spring:
     locations: classpath:db/migration
     baseline-version: 0
     schemas: ${POSTGRES_SCHEMA}
-  
-  thymeleaf:
-    cache: false
-    mode: HTML
-    encoding: UTF-8
-    
-  web:
-    locale: ru_RU
-    locale-resolver: fixed
 
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
   servlet:
     context-path: /
 
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
+
 logging:
   level:
-    com.example: DEBUG
-    org.springframework.web: DEBUG
-    org.hibernate.SQL: DEBUG
+    com.example: ${LOG_LEVEL:INFO}
+    org.springframework.web: ${LOG_LEVEL:INFO}
+    org.hibernate.SQL: ${LOG_LEVEL:INFO}
